src/plp/functional2/parser/Func2Parser.java
/* Generated By:JavaCC: Do not edit this line. Func2Parser.java */
package plp.functional2.parser;



import java.util.ArrayList;

import java.util.List;

//Imports da Funcional2
import plp.functional2.Programa;
import plp.functional2.declaration.DecFuncao;
import plp.functional2.expression.ValorFuncao;
import plp.functional2.expression.ValorAbstrato;
import plp.functional2.expression.ExpDeclaracao;
import plp.functional2.expression.Aplicacao;


//Imports da Funcional1
import plp.functional1.declaration.DeclaracaoFuncional;
import plp.functional1.declaration.DecVariavel;
import plp.functional1.expression.IfThenElse;


//Imports da Expressão2
import plp.expressions2.expression.Expressao;
import plp.expressions2.expression.Valor;
import plp.expressions2.expression.ValorInteiro;
import plp.expressions2.expression.ValorString;
import plp.expressions2.expression.ValorBooleano;
import plp.expressions2.expression.Id;
import plp.expressions2.expression.ExpMenos;
import plp.expressions2.expression.ExpNot;
import plp.expressions2.expression.ExpLength;
import plp.expressions2.expression.ExpSoma;
import plp.expressions2.expression.ExpSub;
import plp.expressions2.expression.ExpAnd;
import plp.expressions2.expression.ExpOr;
import plp.expressions2.expression.ExpEquals;
import plp.expressions2.expression.ExpConcat;




//Imports da Expressao1








public class Func2Parser implements Func2ParserConstants {



    public static void main(String args[]) {

            Func2Parser parser;

            if (args.length == 0) {

                System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Reading from standard input . . .");

                parser = new Func2Parser(System.in);

            } else if (args.length == 1) {

                System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Reading from file " + args[0] + " . . .");

                try {

                        parser = new Func2Parser(new java.io.FileInputStream(args[0]));

                } catch (java.io.FileNotFoundException e) {

                        System.out.println("Funcional 1 PLP Parser Version 0.0.1:  File " + args[0] + " not found.");

                        return;

                }

            } else {

                System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Usage is one of:");

                System.out.println("         java Func2Parser < inputfile");

                System.out.println("OR");

                System.out.println("         java Func2Parser inputfile");

                return;

            }

            Programa programa = null;

            try {

                programa = parser.Input();

                System.out.println("Funcional 2 PLP Parser Version 0.0.1: Expressoes1 program parsed successfully.");

            } catch (ParseException e) {

                e.printStackTrace();

                System.out.println("Funcional 2 PLP Parser Version 0.0.1: Encountered errors during parse.");

                System.exit(0);

            }

            try {

                System.out.println("Funcional 2 PLP Parser Version 0.0.1: running...");

                Valor val = (Valor)programa.executar();

                if (val instanceof ValorString) {

                        ValorString valStr = (ValorString) val;

                        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado="+valStr.valor());

                } else if (val instanceof ValorInteiro) {

                    ValorInteiro valInt = (ValorInteiro) val;

                        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado="+valInt.valor());

                    } else if (val instanceof ValorBooleano) {

                        ValorBooleano valBool = (ValorBooleano) val;

                        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado="+valBool.valor());

                    } else if (val instanceof ValorFuncao) {

                        ValorFuncao valFunc = (ValorFuncao) val;

                        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado = " + val);

                    }

                } catch (Exception e) {

                e.printStackTrace();

                System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Encountered errors during execution.");

            }

        }

  static final public Programa Input() throws ParseException {
    trace_call("Input");
    try {
    Programa retorno;
      retorno = PPrograma();
      jj_consume_token(0);
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Input");
    }
  }

  static final public Valor PValorInteiro() throws ParseException {
    trace_call("PValorInteiro");
    try {
        Token token;
      token = jj_consume_token(INTEGER_LITERAL);
                //System.out.println("ValorInteiro=" + token.toString());

                {if (true) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorInteiro");
    }
  }

  static final public Valor PValorBooleano() throws ParseException {
    trace_call("PValorBooleano");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
        jj_consume_token(FALSE);
                    {if (true) return new ValorBooleano(false);}
        break;
      case TRUE:
        jj_consume_token(TRUE);
                    {if (true) return new ValorBooleano(true);}
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorBooleano");
    }
  }

  static final public Valor PValorString() throws ParseException {
    trace_call("PValorString");
    try {
        Token token;
      token = jj_consume_token(STRING_LITERAL);
//		System.out.println("ValorString=" + token.toString().length());

                String tokenStr = token.toString();

                tokenStr = tokenStr.substring(1,tokenStr.length()-1);

                {if (true) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorString");
    }
  }

  static final public Valor PValorFuncao() throws ParseException {
    trace_call("PValorFuncao");
    try {
        List lista = null;

        Expressao expressao;
      jj_consume_token(FN);
      lista = PListaId();
      jj_consume_token(DOT);
      expressao = PExpressao();
                {if (true) return new ValorFuncao(lista, expressao);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorFuncao");
    }
  }

  static final public Valor PValor() throws ParseException {
    trace_call("PValor");
    try {
        Valor retorno;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        retorno = PValorInteiro();
        break;
      case TRUE:
      case FALSE:
        retorno = PValorBooleano();
        break;
      case STRING_LITERAL:
        retorno = PValorString();
        break;
      case FN:
        retorno = PValorFuncao();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValor");
    }
  }

  static final public Id PId() throws ParseException {
    trace_call("PId");
    try {
        Token token;
      token = jj_consume_token(IDENTIFIER);
                //System.out.println("Id=" + token.toString());

                //System.out.println("tam id=" + token.toString().length());

                String tokenStr = token.toString();

//		tokenStr = tokenStr.substring(1,tokenStr.length()-1);

                {if (true) return new Id(tokenStr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PId");
    }
  }

  static final public Expressao PExpMenos() throws ParseException {
    trace_call("PExpMenos");
    try {
        Expressao retorno;
      jj_consume_token(MINUS);
      retorno = PExpPrimaria();
                {if (true) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpMenos");
    }
  }

  static final public Expressao PExpNot() throws ParseException {
    trace_call("PExpNot");
    try {
        Expressao retorno;
      jj_consume_token(NOT);
      retorno = PExpPrimaria();
                {if (true) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpNot");
    }
  }

  static final public Expressao PExpLength() throws ParseException {
    trace_call("PExpLength");
    try {
        Expressao retorno;
      jj_consume_token(LENGTH);
      retorno = PExpPrimaria();
                if (retorno instanceof ValorString) {

                    ValorString val = (ValorString) retorno;

//		    System.out.println("Length val=" + val.valor());

                }

//		System.out.println("1-" + retorno.toString());

                {if (true) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpLength");
    }
  }

  static final public Expressao PExpPrimaria() throws ParseException {
    trace_call("PExpPrimaria");
    try {
    Expressao retorno;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case FN:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
        retorno = PValor();
        break;
      default:
        jj_la1[2] = jj_gen;
        if (jj_2_1(2147483647)) {
          retorno = PAplicacao();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            retorno = PId();
            break;
          case LPAREN:
            jj_consume_token(LPAREN);
            retorno = PExpressao();
            jj_consume_token(RPAREN);
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpPrimaria");
    }
  }

  static final public Expressao PAplicacao() throws ParseException {
    trace_call("PAplicacao");
    try {
        Id id;
        List lista;
      id = PId();
      jj_consume_token(LPAREN);
      lista = PListaExpr();
      jj_consume_token(RPAREN);
                {if (true) return new Aplicacao(id, lista);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PAplicacao");
    }
  }

  static final public List PListaId() throws ParseException {
    trace_call("PListaId");
    try {
        List retorno = null;

        Id id;
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_1;
        }
        id = PId();
         if (retorno == null) {

             retorno = new ArrayList();

             retorno.add(id);

         } else {

             retorno.add(id);

         }
      }
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PListaId");
    }
  }

  static final public DeclaracaoFuncional PDeclVar() throws ParseException {
    trace_call("PDeclVar");
    try {
        Id id;

        Expressao expressao;

        DeclaracaoFuncional retorno;
      jj_consume_token(VAR);
      id = PId();
      jj_consume_token(ASSIGN);
      expressao = PExpressao();
                {if (true) return new DecVariavel(id, expressao);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclVar");
    }
  }

  static final public DeclaracaoFuncional PDeclFuncao() throws ParseException {
    trace_call("PDeclFuncao");
    try {
        Id id;

        Expressao expressao;

        DeclaracaoFuncional retorno;

        List lista;
      jj_consume_token(FUNC);
      id = PId();
      lista = PListaId();
      jj_consume_token(ASSIGN);
      expressao = PExpressao();
                {if (true) return new DecFuncao(id, new ValorFuncao(lista, expressao));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclFuncao");
    }
  }

  static final public List PDeclFuncional() throws ParseException {
    trace_call("PDeclFuncional");
    try {
        List retorno=null;

        DeclaracaoFuncional decl;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        decl = PDeclVar();
        break;
      case FUNC:
        decl = PDeclFuncao();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
         retorno = new ArrayList();

         retorno.add(decl);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        if (jj_2_2(2147483647)) {
          jj_consume_token(COMMA);
          decl = PDeclVar();
        } else if (jj_2_3(2147483647)) {
          jj_consume_token(COMMA);
          decl = PDeclFuncao();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
             retorno.add(decl);
      }
            {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclFuncional");
    }
  }

  static final public Expressao PExpDeclaracao() throws ParseException {
    trace_call("PExpDeclaracao");
    try {
        List declaracoes;

        Expressao expressao;
      jj_consume_token(LET);
      declaracoes = PDeclFuncional();
      jj_consume_token(IN);
      expressao = PExpressao();
                {if (true) return new ExpDeclaracao(declaracoes, expressao);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpDeclaracao");
    }
  }

  static final public Expressao PExpCondicional() throws ParseException {
    trace_call("PExpCondicional");
    try {
        Expressao expCond, expThen, expElse;
      jj_consume_token(IF);
      expCond = PExpressao();
      jj_consume_token(THEN);
      expThen = PExpressao();
      jj_consume_token(ELSE);
      expElse = PExpressao();
                {if (true) return new IfThenElse(expCond, expThen, expElse);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpCondicional");
    }
  }

  static final public List PListaExpr() throws ParseException {
    trace_call("PListaExpr");
    try {
        List retorno = null;

        Expressao expr;
      expr = PExpressao();
            retorno = new ArrayList();

            retorno.add(expr);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        expr = PExpressao();
            retorno.add(expr);
      }
        {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PListaExpr");
    }
  }

  static final public Expressao PExpUnaria() throws ParseException {
    trace_call("PExpUnaria");
    try {
        Expressao retorno;
      if (jj_2_4(2147483647)) {
        retorno = PExpMenos();
      } else if (jj_2_5(2147483647)) {
        retorno = PExpNot();
      } else if (jj_2_6(2147483647)) {
        retorno = PExpLength();
      } else if (jj_2_7(2147483647)) {
        retorno = PExpDeclaracao();
      } else if (jj_2_8(2147483647)) {
        retorno = PExpCondicional();
      } else if (jj_2_9(2147483647)) {
        retorno = PExpPrimaria();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                //System.out.println("ExpressaoUnaria=" + retorno);

                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpUnaria");
    }
  }

  static final public Expressao PExpBinaria() throws ParseException {
    trace_call("PExpBinaria");
    try {
        Expressao retorno, param2;
        Id id;

        List list = null;
      retorno = PExpUnaria();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
        case OR:
        case LPAREN:
        case EQ:
        case CONCAT:
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          param2 = PExpUnaria();
                retorno = new ExpSoma(retorno, param2);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          param2 = PExpUnaria();
                retorno = new ExpSub(retorno, param2);
          break;
        case AND:
          jj_consume_token(AND);
          param2 = PExpUnaria();
                retorno = new ExpAnd(retorno, param2);
          break;
        case OR:
          jj_consume_token(OR);
          param2 = PExpUnaria();
                retorno = new ExpOr(retorno, param2);
          break;
        case EQ:
          jj_consume_token(EQ);
          param2 = PExpUnaria();
                retorno = new ExpEquals(retorno, param2);
          break;
        case CONCAT:
          jj_consume_token(CONCAT);
          param2 = PExpUnaria();
                retorno = new ExpConcat(retorno, param2);
          break;
        case LPAREN:
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOT:
          case LENGTH:
          case TRUE:
          case FALSE:
          case LET:
          case IF:
          case FN:
          case INTEGER_LITERAL:
          case STRING_LITERAL:
          case IDENTIFIER:
          case LPAREN:
          case MINUS:
            list = PListaExpr();
            break;
          default:
            jj_la1[9] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
                retorno = new Aplicacao((Expressao)retorno, list);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                //System.out.println("ExpressaoBinaria=" + retorno);

                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpBinaria");
    }
  }

  static final public Expressao PExpressao() throws ParseException {
    trace_call("PExpressao");
    try {
        Expressao retorno;
      retorno = PExpBinaria();
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpressao");
    }
